# vdb

./: CHANGELOG.md  ocr-helper.swift  regions-demo.py  serve.py
docs/: vdb.md
vdb/: Cargo.toml
vdb/src/: main.rs  schema.rs
vdb/src/cmd/: compare.rs  diff.rs  element_matrix.rs  matrix.rs  mod.rs  overlay.rs  regions.rs  render.rs  tolerance.rs  tolerances_infer.rs  validate.rs  validate_content.rs  validate_text.rs  validate_v2.rs
vdb/src/cmd/render/: draw.rs  icons.rs  mod.rs  text.rs
